policies/docker-cis-4.4-ensure-images-are-scanned-and-rebuilt-to-include-security-patches.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: docker-cis-4.4-ensure-images-are-scanned-and-rebuilt-to-include-security-patches
spec:
  categories:
  - Docker CIS
  criteriaLocked: true
  description: Images should be scanned frequently for any vulnerabilities. You should
    rebuild all images to include these patches and then instantiate new containers
    from them.
  enforcementActions: []
  eventSource: NOT_APPLICABLE
  exclusions: []
  isDefault: false
  lifecycleStages:
  - BUILD
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: 'GitOps - Docker CIS 4.4: Ensure images are scanned and rebuilt to include
    security patches'
  policySections:
  - sectionName: ''
    policyGroups:
    - fieldName: Fixed By
      booleanOperator: OR
      negate: false
      values:
      - value: .*
  rationale: Vulnerabilities are loopholes or bugs that can be exploited by hackers
    or malicious users, and security patches are updates to resolve these vulnerabilities.
    Image vulnerability scanning tools can be use to find vulnerabilities in images
    and then check for available patches to mitigate these. Patches update the system
    to a more recent code base which does not contain these problems, and being on
    a supported version of the code base is very important, as vendors do not tend
    to supply patches for older versions which have gone out of support. Security
    patches should be evaluated before applying and patching should be implemented
    in line with the organization's IT Security Policy. Care should be taken with
    the results returned by vulnerability assessment tools, as some will simply return
    results based on software banners, and these may not be entirely accurate.
  remediation: Images should be re-built ensuring that the latest version of the base
    images are used, to keep the operating system patch level at an appropriate level.
    Once the images have been re-built, containers should be re-started making use
    of the updated images.
  scope: []
  severity: MEDIUM_SEVERITY
  disabled: true
